--- a/lwc/returnsListViewCmp/returnsListViewCmp.html
+++ b/lwc/returnsListViewCmp/returnsListViewCmp.html
@@ -34,7 +34,7 @@
         <lightning-card variant="Narrow">
             <lightning-layout>
                 <lightning-layout-item class="slds-m-left_small"><lightning-icon size="medium" icon-name="standard:case"></lightning-icon></lightning-layout-item>
-                <lightning-layout-item class="slds-m-left_small">  <p class="slds-text-heading_medium">{headerName}</p>{recordsCount} items, sorted by Account Name</lightning-layout-item>
+                <lightning-layout-item class="slds-m-left_small">  <p class="slds-text-heading_medium">{headerName}</p>sorted by Account Name</lightning-layout-item>
             </lightning-layout>
             <div class="slds-p-horizontal_small">
             <ul class="list">
