--- a/lwc/captureProductKPIDetails/captureProductKPIDetails.html
+++ b/lwc/captureProductKPIDetails/captureProductKPIDetails.html
@@ -30,13 +30,13 @@
                         </p>
                     </li>
                     <li>
-                        <p><span class="slds-text-title">{contactlabel}: </span><a data-name='Contact'
-                                data-id={caseDetail.ContactId} onclick={handleUrl}>{caseDetail.Contact}</a>
+                        <p><span class="slds-text-title">{locationlabel}: </span><a data-name='Location__c'
+                                data-id={caseDetail.LocationId} onclick={handleUrl}>{caseDetail.Location}</a>
                         </p>
                     </li>
                     <li>
-                        <p><span class="slds-text-title">{locationlabel}: </span><a data-name='Location__c'
-                                data-id={caseDetail.LocationId} onclick={handleUrl}>{caseDetail.Location}</a>
+                        <p><span class="slds-text-title">{contactlabel}: </span><a data-name='Contact'
+                                data-id={caseDetail.ContactId} onclick={handleUrl}>{caseDetail.Contact}</a>
                         </p>
                     </li>
                 </ul>
@@ -44,13 +44,13 @@
         </template>
         <lightning-card>
             <div class=" slds-p-vertical_small">
-                <label><strong>New Retrieval Details</strong></label> <br>
+                <label><strong>Retrieval Details</strong></label> <br>
                 <template for:each={itemList} for:item="item" for:index="index">
                     <ul key={item.index} class="list">
                         <li key={item.index} class=" slds-p-horizontal_small  slds-p-vertical_small slds-border_bottom">
                             <lightning-input class="validate" name="SerialNumbers" key={item.index} data-index={index}  data-target-id={index} value={item.serialNumber}
                                 access-key={index} onchange={handleSelected} type="text" placeholder='Enter Value'
-                                label="Enter Serial Number"></lightning-input>
+                                label="Serial Number"></lightning-input>
                             <template for:each={item.kPIQueries} for:item="row" for:index="childindex">
                                 <lightning-input key={row.childindex} checked={row.Response__c} value={row.Response__c} data-index={index} data-childindex={childindex}
                                      type={row.DataType__c} placeholder='Enter Value'
