medtech flows checkin

--- a/lwc/markForOrderVisit/markForOrderVisit.html
+++ b/lwc/markForOrderVisit/markForOrderVisit.html
@@ -34,24 +34,24 @@
                     </dl>
 
                     <dl class="slds-dl_horizontal">
-                        <dt class="slds-dl_horizontal__label">Account</dt>
+                        <dt class="slds-dl_horizontal__label"><b>Account</b></dt>
                         <dd class="slds-dl_horizontal__detail">{rec.AccountName}</dd>
 
-                        <dt class="slds-dl_horizontal__label">Location</dt>
+                        <dt class="slds-dl_horizontal__label"><b>Location</b></dt>
                         <dd class="slds-dl_horizontal__detail">{rec.LocationName}</dd>
 
-                        <dt class="slds-dl_horizontal__label">Status</dt>
+                        <dt class="slds-dl_horizontal__label"><b>Status</b></dt>
                         <dd class="slds-dl_horizontal__detail">{rec.Status}</dd>
 
-                        <dt class="slds-dl_horizontal__label ">Start Time</dt>
+                        <dt class="slds-dl_horizontal__label "><b>Start Time</b></dt>
                         <dd class="slds-dl_horizontal__detail">{rec.VisitStartDate}<span if:true={rec.VisitStartTime}>,
                                 {rec.VisitStartTime}</span></dd>
 
-                        <dt class="slds-dl_horizontal__label ">End Time</dt>
+                        <dt class="slds-dl_horizontal__label "><b>End Time</b></dt>
                         <dd class="slds-dl_horizontal__detail">{rec.VisitEndDate}<span if:true={rec.VisitEndTIme}>,
                                 {rec.VisitEndTIme}</span></dd>
 
-                        <dt class="slds-dl_horizontal__label ">Priority</dt>
+                        <dt class="slds-dl_horizontal__label "><b>Priority</b></dt>
                         <dd class="slds-dl_horizontal__detail">{rec.VisitPriority}</dd>
 
                     </dl>
