--- a/lwc/markProductForOrder/markProductForOrder.html
+++ b/lwc/markProductForOrder/markProductForOrder.html
@@ -81,13 +81,13 @@
                     </dl>
 
                     <dl class="slds-dl_horizontal">
-                        <dt class="slds-dl_horizontal__label">Account</dt>
+                        <dt class="slds-dl_horizontal__label"><b>Account</b></dt>
                         <dd class="slds-dl_horizontal__detail">{rec.AccountName}</dd>
-                        <dt class="slds-dl_horizontal__label">Total Amount</dt>
+                        <dt class="slds-dl_horizontal__label"><b>Total Amount</b></dt>
                         <dd class="slds-dl_horizontal__detail">{rec.TotalAmount}</dd>
-                        <dt class="slds-dl_horizontal__label">Status</dt>
+                        <dt class="slds-dl_horizontal__label"><b>Status</b></dt>
                         <dd class="slds-dl_horizontal__detail">{rec.Status}</dd>
-                        <dt class="slds-dl_horizontal__label">Date</dt>
+                        <dt class="slds-dl_horizontal__label"><b>Date</b></dt>
                         <dd class="slds-dl_horizontal__detail">{rec.EffectiveDate}</dd>
                     </dl>
                 </div>
