--- a/lwc/markForLost/markForLost.html
+++ b/lwc/markForLost/markForLost.html
@@ -1,13 +1,13 @@
 <template>
-    <p class="slds-text-heading_small slds-p-bottom_xx-small"><strong>Mark as Lost</strong></p>
+    <p class="slds-text-heading_small slds-p-bottom_xx-small"><strong>Mark As Lost</strong></p>
     <p class="slds-p-bottom_xx-small"><strong>Lost Inventory Details</strong></p>
-    <p class="slds-p-bottom_xx-small"><strong>Product Name: {ProductName}</strong></p>
+    <p class="slds-p-bottom_xx-small"><strong>Product Name: </strong>{ProductName}</p>
 
     <template for:each={rows} for:item="row" for:index="index">
         <div key={row.Id} class="slds-border_bottom slds-p-bottom_x-small">
             <lightning-layout multiple-rows>
                 <lightning-layout-item size="12" class="slds-p-bottom_xxx-small slds-p-top_x-small">
-                    <strong>Serial Number: {row.Serial_Number__c}</strong>
+                    <p><b>Serial Number:</b> {row.Serial_Number__c}</p>
                 </lightning-layout-item>
                 <lightning-layout-item size="12" class="slds-p-bottom_xx-small">
                     <c-lookup class="bold-label" key={row.Serialized_Product__c} index={index}
@@ -25,7 +25,7 @@
                 <lightning-layout-item size="12" class="slds-p-bottom_xx-small">
                     <c-lookup index={index} class="bold-label" name='User_Responsible_for_Loss__c'
                         data-target-id="User_Responsible_for_Loss__c" icon-name="standard:user" s-object-api-name="user"
-                        label='Who do you think is Responsible?' onlookupupdate={lookupRecord} placeholder="Select users..">
+                        label='Who do you think is responsible?' onlookupupdate={lookupRecord} placeholder="Select users..">
                     </c-lookup>
                 </lightning-layout-item>
             </lightning-layout>
