Added trial return and fixed some bugs

--- a/lwc/eSignature/eSignature.html
+++ b/lwc/eSignature/eSignature.html
@@ -9,13 +9,13 @@
       <div>
         <div class="slds-p-bottom_x-large slds-p-top_small font-color acknowledgement">
           <template if:true={isRequestFlow}>
-            I {contactName} hereby accept that the informatiomn contained in this request is true, complete, and accurate to the best of my knowledge.
+            I {contactName} hereby accept that the information contained in this request is true, complete, and accurate to the best of my knowledge.
           </template>
           <template if:true={isHandingoverFlow}>
-            I {contactName} hereby accept that I have received the product/s with the quanity and serial number as mentioned.
+            I {contactName} hereby accept that I have received the product/s with the quantity and serial number as mentioned.
           </template>
           <template if:true={isRetrievalFlow}>
-            I {contactName} hereby declare that I have returned the product/s with the quanity and serial number as mentioned.
+            I {contactName} hereby declare that I have returned the product/s with the quantity and serial number as mentioned.
           </template>  
         </div>
         <div class="slds-grid slds-gutters">
